objects/ServiceTerritory.object
<CustomObject>
    <fields>
        <fullName>ANVL_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ANVL Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMS_Instance__c</fullName>
        <description>The BMS instance to which the Distributor belongs to</description>
        <inlineHelpText>The BMS instance to which the Distributor belongs to</inlineHelpText>
        <label>BMS_Instance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>USA</fullName>
                </value>
                <value>
                    <fullName>CAN</fullName>
                </value>
                <value>
                    <fullName>CAR</fullName>
                </value>
                <value>
                    <fullName>SPL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Expiry_Date__c</fullName>
        <label>Certification Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code_Description__c</fullName>
        <label>Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Value__c</fullName>
        <label>Code Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ERP__c</fullName>
        <label>ERP</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BMS</fullName>
                </value>
                <value>
                    <fullName>MOVEX</fullName>
                </value>
                <value>
                    <fullName>MOVEX-MYD</fullName>
                </value>
                <value>
                    <fullName>MOVEX-UK</fullName>
                </value>
                <value>
                    <fullName>MOVEX-190</fullName>
                </value>
                <value>
                    <fullName>MOVEX-200</fullName>
                </value>
                <value>
                    <fullName>MOVEX-250</fullName>
                </value>
                <value>
                    <fullName>MOVEX-270</fullName>
                </value>
                <value>
                    <fullName>MOVEX-175</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CSP</fullName>
                </value>
                <value>
                    <fullName>MOVEX-CDK</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL_Service_Territory_Code__c</fullName>
        <description>Territory Code of the Service Location</description>
        <inlineHelpText>Territory Code of the Service Location</inlineHelpText>
        <label>Service Territory Code</label>
        <length>12</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>FSL__Hide_Emergency_Map__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the map will be shown on the emergency wizard</description>
        <label>Hide Emergency Map</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Internal_SLR_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>FSL__NumberOfServicesToDripFeed__c</fullName>
        <label>Number Of Services To Drip Feed</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__O2_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if enhanced scheduling and optimization engine is used</description>
        <label>Use enhanced scheduling and optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Min_Size__c</fullName>
        <label>Service Cluster Min Size (Closed Pilot)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__Service_Cluster_Proximity__c</fullName>
        <label>Service Cluster Proximity (Closed Pilot)</label>
        <precision>6</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL__System_Jobs__c</fullName>
        <label>System Jobs</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BATCH_ServicesInJeopardy</fullName>
                </value>
                <value>
                    <fullName>BATCH_ServicesDispatched</fullName>
                </value>
                <value>
                    <fullName>ChatterNotification</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FSL__TerritoryLevel__c</fullName>
        <label>Territory Level</label>
        <precision>14</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSL_is_Visible_In_Service_Portal__c</fullName>
        <defaultValue>true</defaultValue>
        <description>As per 788 story</description>
        <label>FSL is Visible In Service Portal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Location_Certification__c</fullName>
        <label>Location Certification</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Code__c</fullName>
        <label>Location Code</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mileage_Measure__c</fullName>
        <label>Mileage Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Miles</fullName>
                </value>
                <value>
                    <fullName>Kilometers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>DEALER</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR-BRANCH</fullName>
                </value>
                <value>
                    <fullName>DISTRIBUTOR-HEADQUARTERS</fullName>
                </value>
                <value>
                    <fullName>GROUP</fullName>
                </value>
                <value>
                    <fullName>HOLSET - DISTRIBUTOR</fullName>
                </value>
                <value>
                    <fullName>INDUSTRIAL/VOCATIONAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Warranty_Authorization_Flag__c</fullName>
        <label>Warranty Authorization Flag</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty_Certification_Date__c</fullName>
        <label>Warranty Certification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Work_Type__c</fullName>
        <label>Work Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In Shop</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
                <value>
                    <fullName>FPG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isVisibileCICO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isVisibileCICO</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>All_ServiceTerritories</fullName>
        <columns>Name</columns>
        <columns>IsActive</columns>
        <columns>OperatingHours</columns>
        <columns>ParentTerritory</columns>
        <columns>Location_Code__c</columns>
        <columns>FSL_Service_Territory_Code__c</columns>
        <columns>Phone__c</columns>
        <columns>Region__c</columns>
        <columns>Territory__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Service Territories</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceTerritories</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Territories</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceTerritories</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Territories</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Fields_cannot_be_edited</fullName>
        <active>true</active>
        <description>Fields cannot be edited</description>
        <errorConditionFormula>AND(OR($Profile.Name=&apos;CSS_Service_Advanced&apos;, $Profile.Name=&apos;CSS_Service_Technician&apos;, $Profile.Name=&apos;CSS_CPS_Advanced&apos;), OR(NOT(ISBLANK(FSL_Service_Territory_Code__c)),NOT(ISBLANK(Name)),NOT(ISBLANK(OperatingHoursId)),NOT(ISBLANK(Location_Code__c)),NOT(ISBLANK(Region__c)),NOT(ISBLANK(Territory__c))))</errorConditionFormula>
        <errorMessage>This field cannot be edited</errorMessage>
    </validationRules>
</CustomObject>